Added ETH formating

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "BlockchainURL": "https://freequitytradingethereumdev.azurewebsites.net",
+  "BlockchainURL": "http://127.0.0.1:7545",
   "ExchangeContractAddress": "0x82804039ad6ac0245467fb0251c68ef5b816c9b4",
   "AbiFilename": "Services.NethereumHelpers.ExchangeAbi.json",
   "Tokens": [
